--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -59,39 +59,22 @@
     validate: 'visudo -cf %s'
 
 
+    
+- name: Save public key to file
+  copy:
+    content: "{{ libdev_public }}"
+    dest: "/home/vagrant/.ssh/libdev_rsa.pub"
 
-# Move to local provisioner, see ec2-d7 role     
-#
-#
-# - name: lookup atmire mvn user in lastpass
-#   command: lpass show 373449821012849478 --username
-#   register: atmire.mvnuser
+- name: Save private key to file
+  copy:
+    content: "{{ libdev_private }}"
+    dest: "/home/vagrant/.ssh/libdev_rsa"
 
-# - name: lookup atmire password in lastpass
-#   command: lpass show 373449821012849478 --password
-#   register: atmire.mvnpass
  
-# - name: Create maven settings file with @mire credentials
-#   template:
-#     src: m2__settings.xml.j2
-#     dest: ......m2/settings.xml
+- name: Create maven settings file with @mire credentials
+  template:
+    src: m2__settings.xml.j2
+    dest: "/home/vagrant/.m2/settings.xml"
 
-# - name: Get libdev private key from lastpass
-#   command: lpass show --field "Private Key" 5738026792
-#   register: libdev_private
-
-# - name: Save private key to file
-#   copy:
-#     content: "{{ libdev_private }}"
-#     dest: "/home/vagrant/.ssh/libdev_rsa"
-
-# - name: Get libdev public key from lastpass
-#   command: lpass show --field "Public Key" 5738026792
-#   register: libdev_public
-
-# - name: Save public key to file
-#   copy:
-#     content: "{{ libdev_public }}"
-#     dest: "/home/vagrant/.ssh/libdev_rsa.pub"
 
  
