--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -62,12 +62,12 @@
     
 - name: Save public key to file
   copy:
-    content: "{{ deploy_public }}"
+    content: "{{ deploy_public_key }}"
     dest: "/home/vagrant/.ssh/libdev_rsa.pub"
 
 - name: Save private key to file
   copy:
-    content: "{{ deploy_private }}"
+    content: "{{ deploy_private_key }}"
     dest: "/home/vagrant/.ssh/libdev_rsa"
 
  
