--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -75,12 +75,18 @@
   file:
     path: "/home/vagrant/.m2"
     state: directory
+    mode: 0644
+    owner: vagrant
+    group: vagrant
     
  
 - name: Create maven settings file with @mire credentials
   template:
     src: m2_settings.xml.j2
     dest: "/home/vagrant/.m2/settings.xml"
+    mode: 0644
+    owner: vagrant
+    group: vagrant
 
 
- 
+
